--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"ACES\\" : "security"
+			"ACES\\" : "security",
+			"JD\\" : "jd"
 		}
 	},
 	"name" : "purnamasari/aces-php-sdk",
