--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
 	},
 	"autoload" : {
 		"psr-4" : {
-			"ACES\\" : "security",
-			"JD\\" : "jd"
+			"ACES\\" : "security/",
+			"JD\\" : "jd/"
 		}
 	},
 	"name" : "purnamasari/aces-php-sdk",
