--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"Purnamasari\\JD\\": "jd/"
+			"Purnamasari\\JD\\": "jd/",
+			"Purnamasari\\JD\\Request": "jd/request"
 		}
 	},
 	"name" : "purnamasari/jos-php-sdk",
