--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"autoload": {
 		"psr-4": {
 			"Purnamasari\\JD\\": "jd/",
-			"Purnamasari\\JD\\Request": "jd/request"
+			"Purnamasari\\JD\\Request\\": "jd/request/"
 		}
 	},
 	"name" : "purnamasari/jos-php-sdk",
